[gd_scene load_steps=7 format=3 uid="uid://skjtio160esb"]

[ext_resource type="Script" path="res://abstract_battler/battler.gd" id="1_2dchc"]

[sub_resource type="Animation" id="Animation_clhru"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gfgw0"]
resource_name = "cursed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.423107, 0.00216954, 0.890315, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hyjqv"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eewsq"]
resource_name = "heal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qi1g1"]
_data = {
"RESET": SubResource("Animation_clhru"),
"cursed": SubResource("Animation_gfgw0"),
"fade_out": SubResource("Animation_hyjqv"),
"heal": SubResource("Animation_eewsq")
}

[node name="Battler" type="Node2D"]
script = ExtResource("1_2dchc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="StatusEffectSprite" type="Sprite2D" parent="."]
position = Vector2(51, 68)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
anchors_preset = -1
anchor_right = 0.208
anchor_bottom = 0.312
offset_left = 17.0
offset_top = 10.0
offset_right = 84.0
offset_bottom = 60.0

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 9
text = "Health"

[node name="MagicPointsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 9
text = "Magic points"

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 9
text = "Name here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qi1g1")
}

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
